--- a/myapp/package.json
+++ b/myapp/package.json
@@ -14,6 +14,7 @@
     "jasmine-node": "^1.14.5",
     "kerberos": "~0.0.17",
     "mongodb": "^2.2.22",
+    "mongoose": "^4.8.4",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
