--- a/myapp/package.json
+++ b/myapp/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.4",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.3"
   }
 }
